--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=native-demo
+
+# ?? ??
+logging.level.root=INFO
+logging.level.com.example=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# ?? ??
+server.port=8081
+server.compression.enabled=true
+
+# ?????? ??
+application.name=demo
+application.version=1.0.0
