--- a/src/main/resources/META-INF/native-image/proxy-config.json
+++ b/src/main/resources/META-INF/native-image/proxy-config.json
@@ -1,5 +1,17 @@
 [
   {
+    "interfaces":["com.example.nativedemo.repository.CommentRepository","org.springframework.data.repository.Repository","org.springframework.transaction.interceptor.TransactionalProxy","org.springframework.aop.framework.Advised","org.springframework.core.DecoratingProxy"]
+  },
+  {
+    "interfaces":["com.example.nativedemo.repository.PostRepository","org.springframework.data.repository.Repository","org.springframework.transaction.interceptor.TransactionalProxy","org.springframework.aop.framework.Advised","org.springframework.core.DecoratingProxy"]
+  },
+  {
+    "interfaces":["com.example.nativedemo.repository.UserRepository","org.springframework.data.repository.Repository","org.springframework.transaction.interceptor.TransactionalProxy","org.springframework.aop.framework.Advised","org.springframework.core.DecoratingProxy"]
+  },
+  {
+    "interfaces":["java.lang.reflect.GenericArrayType","org.springframework.core.SerializableTypeWrapper$SerializableTypeProxy","java.io.Serializable"]
+  },
+  {
     "interfaces":["java.lang.reflect.ParameterizedType","org.springframework.core.SerializableTypeWrapper$SerializableTypeProxy","java.io.Serializable"]
   },
   {
@@ -9,9 +21,75 @@
     "interfaces":["java.lang.reflect.WildcardType","org.springframework.core.SerializableTypeWrapper$SerializableTypeProxy","java.io.Serializable"]
   },
   {
+    "interfaces":["java.sql.Connection"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.method.MethodDescription$InDefinedShape$AbstractBase$Executable"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.method.ParameterDescription$ForLoadedParameter$Parameter"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.method.ParameterList$ForLoadedExecutable$Executable"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.type.TypeDefinition$Sort$AnnotatedType"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.type.TypeDescription"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.type.TypeDescription$ForLoadedType$Dispatcher"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.type.TypeDescription$Generic"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.type.TypeDescription$Generic$AnnotationReader$Delegator$ForLoadedExecutableParameterType$Dispatcher"]
+  },
+  {
+    "interfaces":["net.bytebuddy.description.type.TypeDescription$Generic$AnnotationReader$Delegator$ForLoadedMethodReturnType$Dispatcher"]
+  },
+  {
+    "interfaces":["net.bytebuddy.dynamic.loading.ClassInjector$UsingLookup$MethodHandles"]
+  },
+  {
+    "interfaces":["net.bytebuddy.dynamic.loading.ClassInjector$UsingLookup$MethodHandles$Lookup"]
+  },
+  {
+    "interfaces":["org.hibernate.Session","org.springframework.orm.jpa.EntityManagerProxy"]
+  },
+  {
+    "interfaces":["org.hibernate.SessionFactory","org.springframework.orm.jpa.EntityManagerFactoryInfo"]
+  },
+  {
+    "interfaces":["org.springframework.boot.actuate.endpoint.annotation.Endpoint"]
+  },
+  {
+    "interfaces":["org.springframework.boot.actuate.endpoint.annotation.EndpointExtension"]
+  },
+  {
     "interfaces":["org.springframework.boot.context.properties.ConfigurationProperties"]
   },
   {
+    "interfaces":["org.springframework.data.jpa.repository.support.CrudMethodMetadata","org.springframework.aop.SpringProxy","org.springframework.aop.framework.Advised","org.springframework.core.DecoratingProxy"]
+  },
+  {
+    "interfaces":["org.springframework.jdbc.datasource.ConnectionProxy"]
+  },
+  {
+    "interfaces":["org.springframework.web.bind.annotation.ControllerAdvice"]
+  },
+  {
+    "interfaces":["org.springframework.web.bind.annotation.ExceptionHandler"]
+  },
+  {
+    "interfaces":["org.springframework.web.bind.annotation.PathVariable"]
+  },
+  {
     "interfaces":["org.springframework.web.bind.annotation.RequestMapping"]
+  },
+  {
+    "interfaces":["org.springframework.web.bind.annotation.RequestParam"]
   }
 ]
